// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tesing second snapshot for DetailInformation component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <img
        alt="bitcoin"
        src="https://assets.coingecko.com/coins/images/1/thumb/bitcoin.png?1547033579"
      />
      <h1>
        bitcoin
      </h1>
      <p>
        Total supply: 1111111000000
      </p>
      <p>
        circulating supply: 135464685
      </p>
      <p>
        change of coin in a year: 1354200687651%
      </p>
      <p>
        last tickets: 3857351203571
      </p>
    </div>
  </body>,
  "container": <div>
    <img
      alt="bitcoin"
      src="https://assets.coingecko.com/coins/images/1/thumb/bitcoin.png?1547033579"
    />
    <h1>
      bitcoin
    </h1>
    <p>
      Total supply: 1111111000000
    </p>
    <p>
      circulating supply: 135464685
    </p>
    <p>
      change of coin in a year: 1354200687651%
    </p>
    <p>
      last tickets: 3857351203571
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`tesing snapshot for DetailInformation component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <img
        alt="bitcoin"
        src="https://assets.coingecko.com/coins/images/1/thumb/bitcoin.png?1547033579"
      />
      <h1>
        bitcoin
      </h1>
      <p>
        Total supply: 200
      </p>
      <p>
        circulating supply: 20
      </p>
      <p>
        change of coin in a year: -50%
      </p>
      <p>
        last tickets: 5
      </p>
    </div>
  </body>,
  "container": <div>
    <img
      alt="bitcoin"
      src="https://assets.coingecko.com/coins/images/1/thumb/bitcoin.png?1547033579"
    />
    <h1>
      bitcoin
    </h1>
    <p>
      Total supply: 200
    </p>
    <p>
      circulating supply: 20
    </p>
    <p>
      change of coin in a year: -50%
    </p>
    <p>
      last tickets: 5
    </p>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
